Added async resource loading